# docker-ansible

./: CHANGELOG.md  Changelog.md  Dockerfile  LICENCE.md  Pipfile  README.md  install  kineticcafe-ansible  pyproject.toml  requirements.txt  run
.github/: dependabot.yml
.github/workflows/: build-and-push.yml  build-test-image.yml  publish-release.yml
