[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "docker-ansible"
version = "6.0.0"
description = "Ansible in Docker"
authors = [{ name = "Austin Ziegler", email = "aziegler@kineticcommerce.com" }]
dependencies = ["ansible~=10.5"]
requires-python = ">=3.12"
license = { text = "MIT" }

[project.urls]
Documentation = "https://github.com/KineticCafe/docker-ansible#readme"
Issues = "https://github.com/KineticCafe/docker-ansible/issues"
Source = "https://github.com/KineticCafe/docker-ansible"

[tool.pdm]
[[tool.pdm.source]]
url = "https://pypi.python.org/simple"
verify_ssl = true
name = "pypi"

[tool.pdm.dev-dependencies]
dev = []

[tool.pdm.scripts]
update-lock.composite = [
  "pdm lock --python=3.12 --platform=manylinux_2_36_x86_64",
  "pdm lock --python=3.12 --platform=manylinux_2_36_aarch64 --append",
]
